# ssb-validate

./: .gitignore  LICENSE  README.md  RESEARCH.md  SECURITY_NOTES.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
sdd/: mission.md  roadmap.md  spec.md  tech-stack.md
src/ssb_validate/: __init__.py  cif_io.py  cli.py  conductivity.py  models.py  mp_client.py  secrets.py  stability.py  train_conductivity.py
tests/: test_cif_io.py  test_conductivity.py  test_mp_client.py  test_secrets.py  test_security.py  test_smoke.py  test_stability.py
tests/fixtures/: llzo.cif
