[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssb-validate"
version = "0.1.0"
description = "Validator de coherencia para electrolitos solidos: estabilidad (Materials Project convex hull) + coherencia de conductividad ionica (benchmark 2601.10997)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Pedro Sordo Martinez", email = "amurlaniakea@gmail.com" }]
keywords = ["solid-state-electrolyte", "battery", "materials-project", "stability", "ionic-conductivity"]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.5",
    "typer>=0.12",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "pandas>=2.0",
    "openpyxl>=3.1",
]

[project.scripts]
ssb-validate = "ssb_validate.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]
cif = ["pymatgen>=2024.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/ssb_validate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that hit external network (Materials Project API) or expensive dataset loads",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
